--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@
 ### AndroidStudio ###
 # Covers files to be ignored for android development using Android Studio.
 
+strings.xml
+
 # Built application files
 *.apk
 *.ap_
